force-app/main/default/objects/Member_Enrol_Event__e/Member_Enrol_Event__e.object-meta.xml
<CustomObject>
    <description>this is published to signal new member creation/enrolment to handle wallet links population</description>
    <label>Member Enrol Event</label>
    <pluralLabel>Member Enrol Events</pluralLabel>
</CustomObject>