force-app/main/default/objects/Member_Enrol_Event__e/fields/appleWalletLink__c.field-meta.xml
<CustomField>
    <fullName>appleWalletLink__c</fullName>
    <label>appleWalletLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>