force-app/main/default/objects/Member_Enrol_Event__e/fields/googleWalletLink__c.field-meta.xml
<CustomField>
    <fullName>googleWalletLink__c</fullName>
    <label>googleWalletLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>