force-app/main/default/objects/Member_Enrol_Event__e/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>