force-app/main/default/objects/Member_Enrol_Event__e/fields/membershipNo__c.field-meta.xml
<CustomField>
    <fullName>membershipNo__c</fullName>
    <label>membershipNo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>